--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     <h1>HI!!</h1>
+
+    <div class="user-container">
+        대화명 : <input type="text" id="nickname">
+    </div class="display-container">
+        <ul class="chatting-list">
+
+        </ul>
+
+    <div class="input-container">
+        <input type="text" class="chatting-input">
+        <button class="send-button">Send</button>
+    </div>
+    <script src = "/socket.io/socket.io.js"></script>
+    <script src = "js/chat.js"></script>
+
+
+
 </body>
+
+
 </html>
