--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,14 @@
     <h1>HI!!</h1>
 
     <div class="user-container">
+        <label for="nickname">대화명</label>
         대화명 : <input type="text" id="nickname">
     </div class="display-container">
         <ul class="chatting-list">
-
+            <li>
+                <span class = "user">깔깔</span>
+                <img src ="https://placeimg.com/50/50/any" alt="any"
+            </li>
         </ul>
 
     <div class="input-container">
